// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPageBlocks Paragraph should render correctly - dark mode 1`] = `
.emotion-0 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #F6F6F6;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-bottom: 16px;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (max-width: 62.9375rem) {
  .emotion-0 {
    padding-bottom: 0.5rem;
  }
}

<div>
  <p
    class="emotion-0 emotion-1"
    id="idAttr"
  >
    Example text
  </p>
</div>
`;

exports[`MediaPageBlocks Paragraph should render correctly 1`] = `
.emotion-0 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #141414;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-bottom: 16px;
  color: #6E6E73;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (max-width: 62.9375rem) {
  .emotion-0 {
    padding-bottom: 0.5rem;
  }
}

<div>
  <p
    class="emotion-0 emotion-1"
    id="idAttr"
  >
    Example text
  </p>
</div>
`;
